--- a/rex.css
+++ b/rex.css
@@ -1,7 +1,9 @@
-.stick {
-    position:fixed;
-    top:0px;
-	text-align: center;
+#sticky {
+}
+#sticky.fixed {
+    display: block;
+    position: fixed;
+    top: 0;
 }
 
 div.tab_centered {
@@ -48,11 +50,6 @@ p.description {
 	text-align: center;
 	margin-top: 0;
 	margin-bottom: 3em;
-}
-
-div.container {
-	text-align: center;
-	height: 700px;
 }
 
 div.tab {
